2023-11-04T00:59:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6751727079 # 1327
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
* notice: last 14d: unq all: 5 4162
* notice: prev accum: outdated-unq outdated-all / unq all: 1798 171577 / 1838 175997
* notice: next accum: outdated-unq outdated-all / unq all: 1802 171879 / 1838 176091
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -0 -50 / +3 +301 -0 -0 / 3 301
* notice: removed / changed dates: [2023-10-20] / [2023-10-21 2023-11-03]

2023-11-03T16:17:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6747704478 # 1326
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-03
* notice: last 14d: unq all: 5 4158
* notice: prev accum: outdated-unq outdated-all / unq all: 1798 171577 / 1838 175903
* notice: next accum: outdated-unq outdated-all / unq all: 1798 171577 / 1838 175997
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -1 -93 / +3 +207 -0 -0 / 3 207
* notice: removed / changed dates: [] / [2023-10-20 2023-11-03]

2023-11-03T08:16:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6742775356 # 1325
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-03
* notice: last 14d: unq all: 5 4157
* notice: prev accum: outdated-unq outdated-all / unq all: 1798 171577 / 1835 175790
* notice: next accum: outdated-unq outdated-all / unq all: 1798 171577 / 1838 175903
* notice: prev exec diff / last date diff / accum: unq all: +3 +113 -2 -124 / +3 +113 -0 -0 / 3 113
* notice: removed / changed dates: [] / [2023-10-20 2023-11-03]

2023-11-03T00:59:51Z: