@@ -1,8 +1,8 @@
 {
   "timestamp" : "2023-11-04T08:15:09Z",
-  "count" : 134,
-  "count_minmax" : [ 112, 301 ],
-  "count_decinc" : [ -167, +301 ],
+  "count" : 112,
+  "count_minmax" : [ 112, 112 ],
+  "count_decinc" : [ -0, +112 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
