@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-11-04T00:59:00Z",
+  "timestamp" : "2023-11-04T08:15:09Z",
   "count_outdated" : 171879,
   "uniques_outdated" : 1802,
-  "count" : 176091,
-  "uniques" : 1838,
+  "count" : 176203,
+  "uniques" : 1840,
   "clones" : [
     {
       "timestamp": "2023-10-21T00:00:00Z",
-      "count": 251,
+      "count": 134,
       "count_minmax": [ 112, 301 ],
-      "count_decinc": [ 50, 301 ],
+      "count_decinc": [ 167, 301 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -130,6 +130,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2023-11-04T00:00:00Z",
+      "count": 112,
+      "count_minmax": [ 112, 112 ],
+      "count_decinc": [ 0, 112 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
