@@ -1,10 +1,10 @@
 {
-  "count": 4162,
+  "count": 4157,
   "uniques": 5,
   "clones": [
     {
       "timestamp": "2023-10-21T00:00:00Z",
-      "count": 251,
+      "count": 134,
       "uniques": 2
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2023-11-03T00:00:00Z",
       "count": 301,
       "uniques": 3
+    },
+    {
+      "timestamp": "2023-11-04T00:00:00Z",
+      "count": 112,
+      "uniques": 2
     }
   ]
 }
