@@ -1,3 +1,12 @@
+2023-11-04T08:15:09Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6753714978 # 1328
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
+* notice: last 14d: unq all: 5 4157
+* notice: prev accum: outdated-unq outdated-all / unq all: 1802 171879 / 1838 176091
+* notice: next accum: outdated-unq outdated-all / unq all: 1802 171879 / 1840 176203
+* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -117 / +2 +112 -0 -0 / 2 112
+* notice: removed / changed dates: [] / [2023-10-21 2023-11-04]
+
 2023-11-04T00:59:00Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6751727079 # 1327
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
